remove outdated class name

--- a/app/views/redirector_ui/redirect_rules/_form.html.erb
+++ b/app/views/redirector_ui/redirect_rules/_form.html.erb
@@ -26,21 +26,21 @@
   <div class='form-group row'>
     <%= f.label :active, class: 'col-sm-3 col-form-label' %>
     <div class='col-sm-9'>
-      <%= f.check_box :active, class: 'form-control' %>
+      <%= f.check_box :active %>
     </div>
   </div>
 
   <div class='form-group row'>
     <%= f.label :source_is_regex, class: 'col-sm-3 col-form-label' %>
     <div class='col-sm-9'>
-      <%= f.check_box :source_is_regex, class: 'form-control' %>
+      <%= f.check_box :source_is_regex %>
     </div>
   </div>
 
   <div class='form-group row'>
     <%= f.label :source_is_case_sensitive, class: 'col-sm-3 col-form-label' %>
     <div class='col-sm-9'>
-      <%= f.check_box :source_is_case_sensitive, class: 'form-control' %>
+      <%= f.check_box :source_is_case_sensitive %>
     </div>
   </div>
 
